# tiny-lm

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/tokenizer/: test_char_tokenizer.py
tiny_lm/: __init__.py
tiny_lm/model/: base.py
tiny_lm/tokenizer/: __init__.py
