[project]
name = "tiny-lm"
version = "0.1.0"
description = "A tiny language model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tiny_lm"]
